--- a/UI/order-info.html
+++ b/UI/order-info.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Menu - Book-A-Meal</title>
+    <title>Menu - Royal-Foods</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
