add navbar section  in order history

--- a/UI/order-info.html
+++ b/UI/order-info.html
@@ -2,4 +2,29 @@
 <html>
 <head>
     <title>Menu - Royal-Foods</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="css/orders.css">
+</head>
+
+<body>
+	<nav class="">
+		<div class="title-area">
+			<div class="title-area">
+				<a href="index.html" class="title">
+					<img class="logo" src="img/logo-white.svg" width="30">
+					<span class="app-name">Royal-Foods</span>
+				</a>
+				<button id="nav-toggle" href="#">&#9776;</button>
+            </div>
+            </div>
+            <div class="nav-menus">
+                <ul class="nav-list">
+                    <li><a href="menu-user.html">Menu</a></li>
+                    <li><a href="orders-user.html">Order History</a></li>
+                    <li><a href="#">Hi User</a></li>
+                </ul>
+            </div>
+        </nav>
