add section that will display order history for user

--- a/UI/order-info.html
+++ b/UI/order-info.html
@@ -28,3 +28,11 @@
                 </ul>
             </div>
         </nav>
+        <div class="content">
+            <div style="display: flex; width: 100%; flex-direction: column;">
+                
+                <h3 class="page-title">Order Information</h3>
+                <div class="card big">
+                    <div class="order-info">
+                        <img src="img/fried-rice.jpg">
+                    </div>
