add menu section that displays food price ,category and description

--- a/UI/order-info.html
+++ b/UI/order-info.html
@@ -36,3 +36,32 @@
                     <div class="order-info">
                         <img src="img/fried-rice.jpg">
                     </div>
+
+                    <div class="order-info-details">
+                        <div>
+                            <b>ID:</b> 324523442325342
+                        </div>
+                        <div>
+                            <b>Meal Option:</b> Fried rice
+                        </div>
+                        <div>
+                            <b>Price:</b> &#8358;2,000
+                        </div>
+                        <div>
+                            <p>
+                                <b>Description:</b> adsfasfd  asdfasd afs dkfasjdfn;asdkndsfa;knfda
+                            </p>
+                        </div>
+                        <div class="confirm-btns">
+                            <button class="green-btn card-1" style="font-size: 21px;">Confirm Order</button>
+                            <button class="red-btn card-1" style="font-size: 21px;">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            &copy; 2018 Book-A-Meal Inc.
+        </footer>
+    </body>
+    </html>
