extend base.html to order-caterers.html

--- a/UI/order-info.html
+++ b/UI/order-info.html
@@ -61,7 +61,7 @@
             </div>
         </div>
         <footer>
-            &copy; 2018 Book-A-Meal Inc.
+            &copy; 2020 Book-A-Meal@inc
         </footer>
     </body>
     </html>
