add section that will display meals and menu

--- a/UI/orders-caterer.html
+++ b/UI/orders-caterer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Menu - Book-A-Meal</title>
+	<title>Menu - Royal-Meals</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -9,3 +9,25 @@
 	<link rel="stylesheet" type="text/css" href="css/orders.css">
 </head>
 <body>
+
+    <nav class="">
+		<div class="title-area">
+			<div class="title-area">
+				<a href="index.html" class="title">
+					<img class="logo" src="img/logo-white.svg" width="30">
+					<span class="app-name">Royal-Meals</span>
+				</a>
+				<button id="nav-toggle" href="#">&#9776;</button>
+			</div>
+		</div>
+			
+			
+		<div class="nav-menus">
+			<ul class="nav-list">
+				<li><a href="meals-caterer.html">Meals</a></li>
+				<li><a href="menus-caterer.html">Menus</a></li>
+				<li><a href="orders-caterer.html">Order History</a><li>
+				<li><a href="#">Hi Caterer</a></li>
+			</ul>
+		</div>
+	</nav> 
