--- a/UI/orders-caterer.html
+++ b/UI/orders-caterer.html
@@ -88,3 +88,25 @@
             <div class="cell" data-title="Meal">
               Amala and egusi
             </div>
+            <div class="cell" data-title="Customer Name">
+                Obande Otse
+            </div>
+            <div class="cell" data-title="Price">
+              &#8358;1,500
+            </div>
+            <div class="cell" data-title="date">29th April, 2018</div>
+          </div>
+        </div>
+      <script type="text/javascript">
+          let otherFiltersBtn = document.querySelector('.other-filters-btn');
+          let otherFilters = document.querySelector('.other-filters');
+          otherFiltersBtn.onclick = (e) => {
+              if(otherFilters.style.display !== "none" && otherFilters.style.display !== ""){
+                  otherFilters.style.display = "none";
+                  e.target.innerText = "more filters";
+              }else{
+                  otherFilters.style.display = "block";
+                  e.target.innerText = "hide filters"
+              }
+          }
+      </script>	
