add python interpretor that specifies the interpreter to be used

--- a/UI/orders-caterer.html
+++ b/UI/orders-caterer.html
@@ -94,7 +94,7 @@
             <div class="cell" data-title="Price">
               &#8358;1,500
             </div>
-            <div class="cell" data-title="date">29th April, 2018</div>
+            <div class="cell" data-title="date">29th April, 2020</div>
           </div>
         </div>
       <script type="text/javascript">
@@ -110,3 +110,15 @@
               }
           }
       </script>	
+      </div>
+      <br>
+      <div class="meals">
+      </div>
+      </div>
+  </div>
+  <footer>
+      &copy; 2020 Book-A-Meal Inc.
+  </footer>
+  <script type="text/javascript" src="js/script.js"></script>
+</body>
+</html>
